noinst_LIBRARIES=libgame.a

libgame_a_SOURCES = \
	camera.c computer.c computer_utilities.c credits.c \
	engine.c event.c game.c globals.c gui.c \
	init.c init_sdl.c menu.c pause.c \
	timedemo.c switchCallbacks.c scripting_interface.c

AM_CFLAGS = \
	-I$(top_srcdir)/nebu/include \
	-I$(top_srcdir)/src/include \
	-I$(top_srcdir)/lua/include
